Fixed Overflow Issue

--- a/styles/login.css
+++ b/styles/login.css
@@ -3,6 +3,7 @@
 html {
     background-color: #030C15;
     font-family: Poppins, sans-serif;
+    overflow-x: hidden;
 }
 
 h1 {
